k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
    owner: anupam
    environment: dev
spec:
  selector:
    app: mongo
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
      type: ClusterIP
