k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients-api-service
spec:
  selector:
    app: clients-api
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
